<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MoreDetailsActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/moreDetailsCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="@dimen/cornerRadius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/currencyName"
                    style="@style/CurrencyNameStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="@dimen/textViewPadding"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/textViewCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    app:cardElevation="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currencyName">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="0dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/bidTextView"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/valuesPadding"
                            android:text="@string/bidText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/highTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:text="@string/highText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/lowTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:text="@string/lowText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:text="@string/varBidText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:text="@string/pctChangeText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:text="@string/askText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:text="@string/timestampText"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/valuesCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currencyName">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/currencyBid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/valuesPadding"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/currencyHigh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/currencyLow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/varBidtextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/pctTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/askTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/timestampTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="@dimen/valuesPadding"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>